# changelog-diff

./: LICENSE  README.md  changelog-diff.cabal
app/: Main.hs  OutputType.hs  Run.hs
src/: Changelog.hs  Css.hs  FormatConsole.hs  FormatHTML.hs  Lib.hs  Types.hs
test/: Spec.hs
