name:                changelog-diff
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/djg123/changelog-diff#readme
license:             BSD3
license-file:        LICENSE
author:              David J. Gordon
maintainer:          
copyright:           2015 David J. Gordon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , hoogle
  default-language:    Haskell2010

executable changelog-diff-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , changelog-diff
                     , containers >= 0.5.6.2
                     , hoogle
  default-language:    Haskell2010

test-suite changelog-diff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , changelog-diff
                     , containers >= 0.5.6.2
                     , hoogle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/djg123/changelog-diff
